# social-chat-rust-api

./: .gitignore  Cargo.toml
proto/: C2S_Ack.proto  C2S_Auth.proto  C2S_ChatroomJoin.proto  C2S_ChatroomProperty.proto  C2S_CustomMessage.proto  C2S_GetExtendOperation.proto  C2S_GetGroupInfo.proto  C2S_GetMessageStatus.proto  C2S_GetQueryGroupName.proto  C2S_GetSpecialOperation.proto  C2S_GetUserInfoList.proto  C2S_Key.proto  C2S_LogOut.proto  C2S_MessageAt.proto  C2S_MessageAudioRead.proto  C2S_MessageContext.proto  C2S_MessageDelete.proto  C2S_MessageLoad.proto  C2S_MessageRead.proto  C2S_MessageRecall.proto  C2S_RSAKey.proto  C2S_UserProperty.proto  C2S_VideoAnswer.proto  C2S_VideoBeat.proto  C2S_VideoJoin.proto  C2S_VideoLaunch.proto  C2S_VideoMemberModify.proto  C2S_VideoParam.proto  C2S_VideoQuery.proto  C2S_VideoRtcCandidate.proto  C2S_VideoRtcJoin.proto  C2S_VideoRtcOffer.proto  C2S_VideoStatus.proto  S2C_AckStatus.proto  S2C_AtMessages.proto  S2C_AuthSuccess.proto  S2C_ErrorResponse.proto  S2C_ExtendOperation.proto  S2C_GlobalOperation.proto  S2C_MessageRead.proto  (+19 more)
src/: chat_sdk.rs  lib.rs  main.rs
src/api/: api_urls.rs  auth.rs  client.rs  common.rs  mod.rs
src/config/: config.rs  constant.rs  http_result.rs  mod.rs
src/models/: login_user.rs
src/socket/: mod.rs
src/socket/client/: client.rs  connection.rs
src/socket/cmd/: command.rs
src/socket/packs/: codec.rs  mod.rs  req_pack.rs  ret_pack.rs
src/socket/protocols/: at_messages.rs  auth_success.rs  chatroom_join.rs  custom_message.rs  error_response.rs  extend_operation.rs  get_group_info.rs  get_message_status.rs  get_query_group_name.rs  log_out.rs  message_at.rs  message_audio_read.rs  message_context.rs  message_delete.rs  message_load.rs  message_read.rs  message_status.rs  mod.rs  query_group_name.rs  session_unread_count.rs  special_operation.rs  video_answered.rs  video_beat.rs  video_group.rs  video_launch.rs  video_member_modify.rs  video_param.rs  video_query.rs  video_status.rs
src/socket/protos/: ack.rs  ack_status.rs  auth.rs  chatroom_property.rs  get_extend_operation.rs  message_recall.rs  message_records.rs  online_users.rs  rsa_key.rs  ss_handshake.rs  user_property.rs  video_call.rs  video_call_result.rs  video_join.rs  video_rtc_candidate.rs  video_rtc_join.rs  video_rtc_joined.rs  video_rtc_offer.rs
src/util/: aes_util.rs  base64_util.rs  device_util.rs  image_util.rs  logger_util.rs  md5_util.rs  mod.rs  proto_gen_util.rs  rsa_util.rs  safe_store.rs  store_util.rs
tests/: thread.test.rs
