[package]
name = "social-chat-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9"
sled = "0.34.7"
serde = "1.0.152"
once_cell = "1.17.1"
rust-crypto = "0.2"
base64 = "0.21"
rsa = "0.8"
rand = "0.8"
prost = "0.11"
prost-types = "0.11"
bytes = "1.4"
regex = "1.7"

#[build-dependencies]
prost-build = { version = "0.11" }