[package]
name = "social-chat-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.0"
#env_logger = "0.10"
log4rs = { version = "1.2", features = ["gzip"] }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
once_cell = "1.17.1"
lazy_static = "1.4"
rust-crypto = "0.2"
base64 = "0.21"
rsa = "0.8"
aes = "0.8"
rand = "0.8"
prost = "0.11"
prost-types = "0.11"
bytes = "1.4"
regex = "1.7"
image = "0.24"
chrono = "0.4"
tencent-qcloud-cos-rs = "0.1.0"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
tokio = { version = "1.26", features = ["full"] }
project-root = "0.2.2"

#[build-dependencies]
prost-build = { version = "0.11" }

[profile.release]
lto = true